# x509-info

./: .drone.yml  .gitignore  .goreleaser.yaml  Cargo.toml  LICENSE  Makefile  README.md  deny.toml  flake.nix  go.mod  long.tmpl  main.go
.github/: dependabot.yml
.github/workflows/: build.yml  ci.yaml  ci.yml  release.yaml  update.yaml  update.yml
internal/x509/: certificate.go
nix/: check.nix
src/: client.rs  main.rs  output.rs
