[package]
name = "x509-info"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
chrono = {version = "0.4.20", features = ["clock"], default-features = false }
clap = {version = "4.0.18", features = ["derive", "cargo"]}
rustls = {version = "0.20.7", features = ["dangerous_configuration"]}
rustls-native-certs = "0.6.2"
webpki-roots = "0.22.5"
x509-parser = "0.14"
