[package]
name = "x509-info"
version = "0.1.0"
edition = "2021"
authors = ["Franck Cuny <franck@fcuny.net>"]
description = "Print summary of x509 certificates."
homepage = "https://git.fcuny.net/x509-info/about/"
readme = "README.md"

[dependencies]
anyhow = "1.0.82"
chrono = {version = "0.4.20", features = ["clock"], default-features = false }
clap = {version = "4.5.4", features = ["derive", "cargo"]}
rustls = {version = "0.21.11", features = ["dangerous_configuration"]}
rustls-native-certs = "0.6.2"
webpki-roots = "0.22.5"
x509-parser = "0.16"
