[package]
name = "x509-info"
version = "0.1.0"
edition = "2021"
authors = ["Franck Cuny <franck@fcuny.net>"]
description = "Print summary of x509 certificates."
homepage = "https://github.com/fcuny/x509-info/"
readme = "README.md"

[dependencies]
anyhow = "1.0.82"
chrono = {version = "0.4.38", features = ["clock"], default-features = false }
clap = {version = "4.5.4", features = ["derive", "cargo"]}
rustls = {version = "0.23.8", features = ["ring"]}
rustls-native-certs = "0.7.0"
webpki-roots = "0.26.2"
x509-parser = "0.16"
